welcome.lessons.welcome.bdr.BDR.scala.code
var fini:Boolean = false
var lettre:String = "M"

while(fini == false) {
  if (estSurMessage())
    lettre = litMessage();
    if (lettre == "R"){
      droite();
      avance();
    } else if (lettre =="L"){
      gauche();
      avance();

    } else if (lettre =="I"){
      gauche();
      gauche();
      avance();

    } else if (lettre =="A"){
      avance();

    } else if (lettre =="B"){
      avance();
      avance();

    } else if (lettre =="C"){
      avance();
      avance();
      avance();

    } else if (lettre =="Z"){
      recule();

    } else if (lettre =="Y"){
      recule();
      recule();

    } else if (lettre =="X"){
      recule();
      recule();
      recule();

    } else (){
      fini = True ;
    }
}

